--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced JavaScript-working-with-the-DOM</title>
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
 </head>
 <body>
-    
+    <h1>Hello Welcome</h1>
+    <section>
+        <div>
+            <p>Hello Welcome <a href="">home</a></p>
+        </div>
+    </section>
 </body>
 </html>
