use utility functions as opposed to drilling into the DOM

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Hello Welcome</h1>
     <section>
         <div>
-            <p>Hello Welcome <a href="">home</a></p>
+            <p>Hello Welcome <a  id="anchor-tag" href="">home</a></p>
         </div>
     </section>
 </body>
