--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <a  id="anchor-tag" href="">home</a>
             </p>
         </div>
+        <input type="text">
     </section>
 </body>
 </html>
